--- a/Finale/users/static/style.css
+++ b/Finale/users/static/style.css
@@ -2,6 +2,17 @@
     text-align: center;
  }
 
+ table {
+  text-align: center;
+  font-size: 20px;
+  position: relative;
+  left: 10%;
+ }
+
+ td, th {
+  padding: 15px;
+ }
+
 #user {
   display: none;
 }
