--- a/Finale/users/templates/BCD/booking.html
+++ b/Finale/users/templates/BCD/booking.html
@@ -8,6 +8,33 @@
 <body>
 
 {% block content %}
+{% if user.username == "FireSH" %}
+<div class="container text-center">
+  <h2> Logged in as: FireSH
+    <table>
+    <thead>
+        <tr>
+            <th>Reservation ID</th>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Party Size</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for reservation in reservations %}
+        <tr>
+            <td>{{ reservation.id }}</td>
+            <td>{{ reservation.name }}</td>
+            <td>{{ reservation.date }}</td>
+            <td>{{ reservation.time }}</td>
+            <td>{{ reservation.party_size }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+</div>
+{% else %}
 <div class="container text-center">
   <div class="row">
     <div class="col">
@@ -23,6 +50,7 @@
     </div>
   </div>
 </div>
+{% endif %}
 {% endblock %} 
 
 </body>
