--- a/Finale/users/templates/BCD/collection.html
+++ b/Finale/users/templates/BCD/collection.html
@@ -8,6 +8,35 @@
 <body>
 
 {% block content %}
+{% if user.username == "BurgerKing" %}
+<div class="container text-center">
+  <h2> Logged in as: BurgerKing
+    <table>
+        <thead>
+            <tr>
+                <th>Order ID</th>
+                <th>Customer</th>
+                <th>Order</th>
+                <th>Price</th>
+                <th>Notes</th>
+                <th>Pickup Time</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for order in collection_orders %}
+            <tr>
+                <td><p>{{ order.orderID }}</p></td>
+                <td><p>{{ order.customer }}</p></td>
+                <td><p>{{ order.order }}</p></td>
+                <td><p>{{ order.price }}</p></td>
+                <td><p>{{ order.notes }}</p></td>
+                <td><p>{{ order.pickupTime }}</p></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% else %}
 <div class="container text-center">
   <div class="row">
     <div class="col">
@@ -24,6 +53,7 @@
     </div>
   </div>
 </div>
+{% endif %}
 {% endblock %} 
 
 </body>
