navigation buttons added + favicon

--- a/Finale/users/templates/BCD/booking.html
+++ b/Finale/users/templates/BCD/booking.html
@@ -47,6 +47,10 @@
       <p> See more information <a href="https://www.firesteakhouse.ie/">here.</a></p>
       <br>
       <p> Address: Dawson Street The Mansion, Dublin 2</p>
+      <br>
+      <button ><a href="{% url 'bookingAdd' %}"> Make a Booking</a></button>
+      <br>
+      <br>
     </div>
   </div>
 </div>
