--- a/Finale/users/templates/BCD/collection.html
+++ b/Finale/users/templates/BCD/collection.html
@@ -50,6 +50,10 @@
       <p>See more information <a href="https://www.whopper.ie/">here.</a></p>
       <br>
       <p>Address: Unit 65, Parnell Mall, Ilac Centre, Henry St, Dublin 1, D01 HP73</p>
+      <br>
+      <button ><a href="{% url 'collectionAdd' %}"> Order for Collection</a></button>
+      <br>
+      <br>
     </div>
   </div>
 </div>
