--- a/Finale/users/templates/BCD/delivery.html
+++ b/Finale/users/templates/BCD/delivery.html
@@ -53,6 +53,10 @@
       <p>See more information <a href="https://pizzamax.ie/">here.</a></p>
       <br>
       <p>Delivery Area - Dublin City Centre</p>
+      <br>
+      <button ><a href="{% url 'deliveryAdd' %}"> Place an Order</a></button>
+      <br>
+      <br>
     </div>
   </div>
 </div> 
