--- a/Finale/users/templates/base.html
+++ b/Finale/users/templates/base.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Finale</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
 
     {% load static %}
     <link rel="stylesheet" href="{% static '/style.css' %}" type="text/css" >
+    <link rel="icon" type="image/x-icon" href="{% static '/favicon.ico' %}">
     <script src="{% static '/script.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
@@ -72,6 +74,17 @@
 {% block content %}
 
 {% endblock %}
+    <footer class="footer">
+      <div class="container">
+        <p> Finale - Created by Lee Harold 2023</p>
+        <p> Main Technologies used: Django, Javascript, SQLite3
+        <br>
+        <a href="{% url 'delivery' %}"> Delivery</a>
+        <a href="{% url 'booking' %}"> Booking</a>
+        <a href="{% url 'collection' %}"> Collection</a>
+      </div>
+  </footer>
+
   </body>
 </html>
 
