--- a/Finale/users/templates/base.html
+++ b/Finale/users/templates/base.html
@@ -76,12 +76,13 @@
 {% endblock %}
     <footer class="footer">
       <div class="container">
-        <p> Finale - Created by Lee Harold 2023</p>
-        <p> Main Technologies used: Django, Javascript, SQLite3
         <br>
+        <p> Finale - Created by Lee Harold 2023</p>
+        <p> Main Technologies used: Django, Javascript, SQLite3. Designed with Bootstrap</p>
         <a href="{% url 'delivery' %}"> Delivery</a>
         <a href="{% url 'booking' %}"> Booking</a>
         <a href="{% url 'collection' %}"> Collection</a>
+        <br><br>
       </div>
   </footer>
 
