--- a/Finale/users/templates/home.html
+++ b/Finale/users/templates/home.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="container text-center">
-  <h1> Welcome to Finale, where we cut the<br> boring parts and get to good part sooner. </h1>
+  <h1> Welcome to Finale, where we cut out the<br> boring bits and get to good part sooner. </h1>
   <br>
   <div class="row">
     <div class="col">
