--- a/Finale/users/templates/BCD/collectionAdd.html
+++ b/Finale/users/templates/BCD/collectionAdd.html
@@ -10,6 +10,12 @@
 
   {% block content %}
     {% if user.is_authenticated %}
+      {% if user.username == "PizzaMax" or user.username == "BurgerKing" or user.username == "FireSH" %}
+      <div class="container text-center">
+        <p id="user">{{ user.username }}</p>
+        <h1> You are not authorised to use customer services. Please navigate to your relative company page.</h1>
+      </div>
+      {% else %}
       <div class="container text-center">
         <h2>Order for Collection!</h2>
         <br>
@@ -79,6 +85,7 @@
         </form>
         <br>
       </div>
+      {% endif %}
     {% else %}
       <div class="container text-center">
         <h2>You are not logged in. Please log in <a href="{% url 'login' %}">here</a> to use our services</h2>
