--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -9,6 +9,12 @@
 
   {% block content %}
     {% if user.is_authenticated %}
+      {% if user.username == "PizzaMax" or user.username == "BurgerKing" or user.username == "FireSH" %}
+      <div class="container text-center">
+        <p id="business">Logged in as: {{ user.username }}</p>
+        <h1> You are not authorised to use customer services. Please navigate to your relative company page.</h1>
+      </div>
+      {% else %}
       <div class="container text-center">
         <br>
         <p id="user">{{ user.username }}</p>
@@ -77,6 +83,7 @@
         </form>
         <br>
       </div>
+      {% endif %}
     {% else %}
       <div class="container text-center">
         <h2>You are not logged in. Please log in <a href="{% url 'login' %}">here</a> to use our services</h2>
