added extra navigation for login and register

--- a/Finale/users/templates/authenticate/create_user.html
+++ b/Finale/users/templates/authenticate/create_user.html
@@ -26,7 +26,10 @@
 
 	{{ form.as_p }}
 
-  <input type="submit" value="Submit" class="btn btn secondary">
+  <input type="submit" value="Submit" class="btn btn-secondary">
+  <br>
+  <br>
+  <p> Already Registered? Login <a href="login_user">Here</a>.</p>
 </form>
 
 </div>
