--- a/Finale/users/templates/authenticate/login.html
+++ b/Finale/users/templates/authenticate/login.html
@@ -26,7 +26,10 @@
     <label for="exampleInputPassword" class="form-label">Password</label>
     <input type="password" class="form-control" name="password">
   </div>
-  <input type="submit" value="Submit" class="btn btn secondary">
+  <input type="submit" value="Submit" class="btn btn-secondary">
+  <br>
+  <br>
+  <p> No Account? Register <a href='create_user'> Here</a>.</p>
 </form>
 </div>
 {% endblock %} 
